Extract partials and refactor some views

--- a/app/views/renalware/transplants/donor_workups/_sections_nav.html.slim
+++ b/app/views/renalware/transplants/donor_workups/_sections_nav.html.slim
@@ -1,3 +1,15 @@
+ruby:
+  sections = [
+    ["Relationship", "relationship"],
+    ["Co-morbidities", "comorbidities"],
+    ["Infections", "infections"],
+    ["Imaging/Scans", "imaging_and_scans"],
+    ["Creatinine Clearance", "creatinine_clearance"],
+    ["GFR", "glomerular_filtration_rate"],
+    ["Urine Dipsticks", "urine_dipsticks"],
+    ["Other Investigations", "other_investigations"]
+  ]
+
 dl.sub-nav data-magellan-expedition="fixed"
   - sections.each do |title, target|
     dd data-magellan-arrival="#{target}"
