--- a/app/views/renalware/transplants/donor_workups/_form.html.slim
+++ b/app/views/renalware/transplants/donor_workups/_form.html.slim
@@ -5,20 +5,6 @@ ruby:
     patient_transplants_donor_workup_path(@patient)
   end
 
-  sections = [
-    ["Relationship", "relationship"],
-    ["Co-morbidities", "comorbidities"],
-    ["Infections", "infections"],
-    ["Imaging/Scans", "imaging_and_scans"],
-    ["Creatinine Clearance", "creatinine_clearance"],
-    ["GFR", "glomerular_filtration_rate"],
-    ["Urine Dipsticks", "urine_dipsticks"],
-    ["Other Investigations", "other_investigations"]
-  ]
-
-
-= render "sections_nav", sections: sections
-
 .row.top
   .medium-6.columns
     = f.submit "Save", class: "button"
@@ -28,20 +14,20 @@ ruby:
 .form-content
   = f.simple_fields_for :document, f.object.document do |fd|
 
-    = render layout: "fieldset",
+    = render layout: "renalware/shared/documents/fieldset",
       locals: { legend: "Donor-Recipient Relationship", name: "relationship" } do
       = fd.simple_fields_for :relationship, fd.object.relationship do |fcm|
         = fcm.input :donor_recip_relationship
         = fcm.input :relationship_other
 
-    = render layout: "fieldset",
+    = render layout: "renalware/shared/documents/fieldset",
       locals: { legend: "Co-morbidities", name: "comorbidities" } do
       = fd.simple_fields_for :comorbidities, fd.object.comorbidities do |fcm|
         table
           - fcm.object.class.attributes_list.each do |attribute|
             = render_input fcm, attribute
 
-    = render layout: "fieldset",
+    = render layout: "renalware/shared/documents/fieldset",
       locals: { legend: "Virology/Bacteriology/Cytology", name: "infections" } do
       = fd.simple_fields_for :infections, fd.object.infections do |fcm|
         table.no-stripes
@@ -55,7 +41,7 @@ ruby:
           = render_input fcm, :toxoplasmosis
           = render_input fcm, :cytology
 
-    = render layout: "fieldset",
+    = render layout: "renalware/shared/documents/fieldset",
       locals: { legend: "Imaging and Scans", name: "imaging_and_scans" } do
       = fd.simple_fields_for :imaging_and_scans, fd.object.imaging_and_scans do |fcm|
         table.no-stripes
@@ -63,7 +49,7 @@ ruby:
           = render_input fcm, :chest_xray
           = render_input fcm, :renal_ultrasound
 
-    = render layout: "fieldset",
+    = render layout: "renalware/shared/documents/fieldset",
       locals: { legend: "Creatinine Clearance", name: "creatinine_clearance" } do
       = fd.simple_fields_for :creatinine_clearance, fd.object.creatinine_clearance do |fcm|
         = fcm.input :clearance_type, input_html: { class: "small-input" }
@@ -71,7 +57,7 @@ ruby:
           = render_input fcm, :clearance
           = render_input fcm, :measured_clearance
 
-    = render layout: "fieldset",
+    = render layout: "renalware/shared/documents/fieldset",
       locals: { legend: "Glomerular Filtration Rate (GFR)", name: "glomerular_filtration_rate" } do
       = fd.simple_fields_for :glomerular_filtration_rate,
         fd.object.glomerular_filtration_rate do |fcm|
@@ -81,14 +67,14 @@ ruby:
           = render_input fcm, :measured_value
           = render_input fcm, :isotopic_value
 
-    = render layout: "fieldset",
+    = render layout: "renalware/shared/documents/fieldset",
       locals: { legend: "Urine Dipsticks", name: "urine_dipsticks" } do
       = fd.simple_fields_for :urine_dipsticks, fd.object.urine_dipsticks do |fcm|
         table.no-stripes
           = render_input fcm, :blood
           = render_input fcm, :protein
 
-    = render layout: "fieldset",
+    = render layout: "renalware/shared/documents/fieldset",
       locals: { legend: "Other Investigations", name: "other_investigations" } do
       = fd.simple_fields_for :other_investigations, fd.object.other_investigations do |fcm|
         = fcm.input :number_renal_arteries, collection: (1..5).to_a, input_html: { class: "small-input" }
