--- a/app/views/renalware/transplants/donor_workups/_record_header.html.slim
+++ b/app/views/renalware/transplants/donor_workups/_record_header.html.slim
@@ -1,8 +1,12 @@
-= render "renalware/patients/patient_info_header", model: @patient
-= render "renalware/patients/mini_renal_profile", model: @patient
+.row
+  .columns.large-12
+    = render "renalware/patients/patient_info_header", model: @patient
+    = render "renalware/patients/mini_renal_profile", model: @patient
 
-h2 Donor Workup
+    h2 Donor Workup
 
-dl.sub-nav
-  dd= link_to "View", patient_transplants_donor_workup_path(@patient)
-  dd= link_to "Edit", edit_patient_transplants_donor_workup_path(@patient)
+    dl.sub-nav
+      dd= link_to "View", patient_transplants_donor_workup_path(@patient)
+      dd= link_to "Edit", edit_patient_transplants_donor_workup_path(@patient)
+
+    = render "sections_nav"
