--- a/app/views/renalware/shared/documents/_attributes_group.html.slim
+++ b/app/views/renalware/shared/documents/_attributes_group.html.slim
@@ -1,17 +1,25 @@
+ruby:
+  if group.respond_to? :each
+    groups = group
+  else
+    groups = [group]
+  end
+
 .row data-magellan-destination="#{destination}"
   a name="#{destination}"
   .columns.large-12
     = field_set_tag do
       legend= legend
       dl
-        - group.class.attributes_list.each do |attribute|
-          - value = group.send(attribute)
-          dt
-            = group.class.human_attribute_name attribute
-          dd
-            - if value.respond_to? :nested_attribute?
-              = render value
-            - elsif value.respond_to? :text
-              = value.text
-            - else
-              = value
+        - groups.each do |group|
+          - group.class.attributes_list.each do |attribute|
+            - value = group.send(attribute)
+            dt
+              = group.class.human_attribute_name attribute
+            dd
+              - if value.respond_to? :nested_attribute?
+                = render value
+              - elsif value.respond_to? :text
+                = value.text
+              - else
+                = value
