Shorten sub-nav links

--- a/app/views/renalware/transplants/donor_workups/_sections_nav.html.slim
+++ b/app/views/renalware/transplants/donor_workups/_sections_nav.html.slim
@@ -3,8 +3,8 @@ ruby:
     ["Relationship", "relationship"],
     ["Co-morbidities", "comorbidities"],
     ["Infections", "infections"],
-    ["Imaging/Scans", "imaging_and_scans"],
-    ["Creatinine Clearance", "creatinine_clearance"],
+    ["Imaging", "imaging_and_scans"],
+    ["Creat Clearance", "creatinine_clearance"],
     ["GFR", "glomerular_filtration_rate"],
     ["Urine Dipsticks", "urine_dipsticks"],
     ["Other Investigations", "other_investigations"]
