Handle missing version instance

--- a/app/views/renalware/shared/_last_update.html.slim
+++ b/app/views/renalware/shared/_last_update.html.slim
@@ -1,7 +1,7 @@
 - if record.persisted?
-  - version = record.versions.last
-  span.note
-    | Last update:&nbsp;
-    = timestamp version.created_at
-    | &nbsp;by&nbsp;
-    = who_did_it version
+  - if version = record.versions.last
+    span.note
+      | Last update:&nbsp;
+      = timestamp version.created_at
+      | &nbsp;by&nbsp;
+      = who_did_it version
