--- a/app/views/renalware/patients/problems.html.slim
+++ b/app/views/renalware/patients/problems.html.slim
@@ -18,7 +18,7 @@
               | View history of active problem
 
             .content id="history-list-#{pb.object.id}"
-              - pb.object.versions.map(&:reify).reverse.each do |p|
+              - pb.object.versions.map(&:reify).compact.reverse.each do |p|
 
                 ul.no-bullet
                   li.history
