Use #to_s for simple representation of dated attribute

--- a/app/views/renalware/shared/documents/_dated_confirmation.html.slim
+++ b/app/views/renalware/shared/documents/_dated_confirmation.html.slim
@@ -1,2 +1,1 @@
-= dated_confirmation.status.try(&:text)
-= " (#{dated_confirmation.date})" if dated_confirmation.date.present?
+= dated_confirmation.to_s
