--- a/app/views/renalware/shared/documents/_dated_result.html.slim
+++ b/app/views/renalware/shared/documents/_dated_result.html.slim
@@ -1,2 +1,1 @@
-= dated_result.result.respond_to?(:text) ? dated_result.result.text : dated_result.result
-= " (#{dated_result.date})" if dated_result.date.present?
+= dated_result.to_s
