--- a/app/views/renalware/shared/documents/_dated_test.html.slim
+++ b/app/views/renalware/shared/documents/_dated_test.html.slim
@@ -1,2 +1,1 @@
-= dated_test.result.respond_to?(:text) ? dated_test.result.text : dated_test.result
-= " (#{dated_test.date})" if dated_test.date.present?
+= dated_test.to_s
