Refactored and moved pd_bag_volume_options helper to its own BagVolume class. Deleted old helper and spec test.

--- a/app/views/renalware/pd_regimes/bags/_form.html.slim
+++ b/app/views/renalware/pd_regimes/bags/_form.html.slim
@@ -7,7 +7,7 @@
 
   .large-3.columns.inline
     = rb.label :volume, 'Volume (ml)'
-    = rb.select :volume, pd_bag_volume_options, { prompt: "Please select from options" }, class: "pd-regime-bag-volume-select"
+    = rb.select :volume, BagVolume.values, { prompt: "Please select from options" }, class: "pd-regime-bag-volume-select"
 
   .large-2.columns.inline
     = rb.submit 'Remove', name: "actions[remove][#{rb.index}]", class: 'right remove-bag'
