Extract deaths controller
This reduces the responsibilities of the patients controller.

--- a/app/views/renalware/navigation/_patients_admin.html.slim
+++ b/app/views/renalware/navigation/_patients_admin.html.slim
@@ -6,4 +6,4 @@ li.has-dropdown
     li
       = link_to "Add a New Patient", new_patient_path
     li
-      = link_to "Deceased Patients", death_patients_path
+      = link_to "Deceased Patients", patient_deaths_path
