--- a/app/views/renalware/patients/_header.html.slim
+++ b/app/views/renalware/patients/_header.html.slim
@@ -4,5 +4,5 @@
 .row
   dl.sub-nav
     dd= link_to "List", patients_path
-    dd= link_to "Deceased", death_patients_path
+    dd= link_to "Deceased", patient_deaths_path
     dd= link_to "Add patient", new_patient_path
