Extract problems index from patients into appropriate controller

--- a/app/views/renalware/problems/index.html.slim
+++ b/app/views/renalware/problems/index.html.slim
@@ -7,7 +7,7 @@
 
 .wide-screen
   = form_for @patient do |f|
-    = hidden_field_tag :redirect_url, problems_patient_path(@patient)
+    = hidden_field_tag :redirect_url, patient_problems_path(@patient)
 
     = f.fields_for :problems do |pb|
       - if pb.object.versions != []
