--- a/app/views/renalware/clinical_summaries/show.html.slim
+++ b/app/views/renalware/clinical_summaries/show.html.slim
@@ -7,7 +7,7 @@
 
 .wide-screen
     = field_set_tag do
-      legend = link_to "#{@patient.problems.length} Problems", problems_patient_path(@patient)
+      legend = link_to "#{@patient.problems.length} Problems", patient_problems_path(@patient)
 
       ul.no-bullet
         - @patient.problems.each do |p|
