--- a/app/views/renalware/patients/_patient_sub_nav.html.slim
+++ b/app/views/renalware/patients/_patient_sub_nav.html.slim
@@ -4,7 +4,7 @@ nav class="top-bar patient-nav" data-topbar="" role="navigation"
       li= link_to "Admin", patient_path(@patient), title: "Demographics"
       li= link_to "ClinSumm", patient_clinical_summary_path(@patient), title: "Clinical Summary"
       li= link_to "Modals", patient_modalities_path(@patient), title: "Patient Modality"
-      li= link_to "Problems (#{@patient.problems.length})", problems_patient_path(@patient), title: "Manage Problems"
+      li= link_to "Problems (#{@patient.problems.length})", patient_problems_path(@patient), title: "Manage Problems"
       li= link_to "Meds (#{@patient.medications.length})", manage_medications_patient_path(@patient), title: "Manage Medications"
       li= link_to "Events (#{@patient.events.length})", patient_events_path(@patient), title: "Patient Events"
       li= link_to "Clinic Visits (#{@patient.clinic_visits.length})", patient_clinic_visits_path(@patient), title: "Clinic Visits"
