--- a/app/views/renalware/problems/index.html.slim
+++ b/app/views/renalware/problems/index.html.slim
@@ -14,7 +14,7 @@
 
         dl.accordion.right.columns.large-6.problem-history(data-accordion)
           dd.accordion-navigation
-            a.fi-plus.fi-minus.toggle-info.problem-history-link" href="#history-list-#{pb.object.id}"
+            a.fi-plus.fi-minus.toggle-info.problem-history-link href="#history-list-#{pb.object.id}"
               | View history of active problem
 
             .content id="history-list-#{pb.object.id}"
