--- a/app/views/renalware/patients/_mini_renal_profile.html.slim
+++ b/app/views/renalware/patients/_mini_renal_profile.html.slim
@@ -2,6 +2,8 @@
   = link_to "ESRF", edit_patient_esrf_path(@patient)
   = " "
   = @patient.esrf
+  = " "
+  = link_to "Transplant Status/OPs", patient_transplants_dashboard_path(@patient)
 
   br
   - if display_pd_menu(@patient.modalities.with_deleted)
