--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *
  *= require_self
  *= require select2/css/select2.min
- *= require fontawesome
+ *= require font-awesome
  *= require foundation-datepicker
  *= require_tree ./lib
  *= require_tree ./renalware
