--- a/app/assets/stylesheets/renalware/globals.css.scss
+++ b/app/assets/stylesheets/renalware/globals.css.scss
@@ -178,3 +178,11 @@ span.note {
   color: #999;
   font-size: 0.8rem;
 }
+
+.call-to-action {
+  text-align: center;
+  i {
+    display: block;
+    font-size: 5em;
+  }
+}
