--- a/app/views/renalware/transplants/registrations/_record_header.html.slim
+++ b/app/views/renalware/transplants/registrations/_record_header.html.slim
@@ -8,6 +8,7 @@
       = render "renalware/shared/last_update", record: @registration
 
     dl.sub-nav
+      dd= link_to "Transplant Status", patient_transplants_dashboard_path(@patient)
       dd= link_to "View", patient_transplants_registration_path(@patient)
       dd= link_to "Edit", edit_patient_transplants_registration_path(@patient)
 
