--- a/app/views/renalware/problems/index.html.slim
+++ b/app/views/renalware/problems/index.html.slim
@@ -8,19 +8,8 @@
 .wide-screen
   = form_for @patient, url: patient_problems_batch_path(@patient) do |f|
     = f.fields_for :problems do |pb|
-      - if pb.object.versions != []
-
-        dl.accordion.right.columns.large-6.problem-history(data-accordion)
-          dd.accordion-navigation
-            a.fi-plus.fi-minus.toggle-info.problem-history-link href="#history-list-#{pb.object.id}"
-              | View history of active problem
-
-            .content id="history-list-#{pb.object.id}"
-              - pb.object.versions.map(&:reify).compact.reverse.each do |p|
-
-                ul.no-bullet
-                  li.history
-                    = "#{p.full_description}, #{p.updated_at.strftime("%d/%m/%Y - %H:%M")}"
+      - if pb.object.versions.any?
+        = render 'versions', object: pb.object, versions: pb.object.versions
 
       - if pb.object.new_record?
         = render partial: 'renalware/problems/new', locals: { pb: pb }
