Extract medications index action

--- a/app/views/renalware/medications/index.html.slim
+++ b/app/views/renalware/medications/index.html.slim
@@ -11,8 +11,8 @@
 .wide-screen
   = nested_form_for @patient do |f|
 
-    = hidden_field_tag :redirect_url, manage_medications_patient_path(@patient)
-    = hidden_field_tag :template, "manage_medications"
+    = hidden_field_tag :redirect_url, patient_medications_path(@patient)
+    = hidden_field_tag :template, "renalware/medications/index"
     = hidden_field_tag :message, "You have successfully updated a patient's medications."
 
     = f.fields_for :medications do |pm|
