--- a/app/views/renalware/admin/users/index.html.slim
+++ b/app/views/renalware/admin/users/index.html.slim
@@ -13,7 +13,7 @@
 
     tbody
       - @users.each do |user|
-        tr
+        = content_tag_for(:tr, user) do
           td= link_to 'Edit', edit_admin_user_path(user)
           td= user.id
           td= user.to_s(:last_first)
