--- a/app/views/renalware/medications/index.html.slim
+++ b/app/views/renalware/medications/index.html.slim
@@ -18,8 +18,9 @@
         = render partial: "renalware/medications/new", locals: { pm: pm } if pm.object.new_record?
 
     - unless current_user.read_only?
-      .large-12.columns
-        = f.link_to_add "Add a new medication", :medications, class: "add-medication button tiny right mt"
-        = f.submit "Save Medication", class: "button tiny right save mt"
-        = link_to "Cancel", patient_clinical_summary_path(@patient), class: "button tiny left cancel mt"
-
+      .row
+        = f.link_to_add "Add a new medication", :medications, class: "add-medication"
+      .row
+        = f.submit "Save Medication", class: "button tiny mt"
+        span= " or "
+        = link_to "cancel", patient_clinical_summary_path(@patient)
