Added id for patient-demographics - patients show view.

--- a/app/views/renalware/patients/show.html.slim
+++ b/app/views/renalware/patients/show.html.slim
@@ -2,7 +2,7 @@
   .columns.large-12
     = render "record_header"
 
-.patient-demographics
+#patient-demographics
   .row
     .large-12.columns
       = field_set_tag do
