Extract Drugs (list) Management module)

--- a/app/views/renalware/event_types/new.html.slim
+++ b/app/views/renalware/event_types/new.html.slim
@@ -9,4 +9,4 @@
       = render partial: 'form', locals: {f: f}
       = submit_tag "Save", class: "button"
       span= " or "
-      = link_to "cancel", drugs_path
+      = link_to "cancel", drugs_drugs_path
