--- a/app/views/renalware/medications/_form.html.slim
+++ b/app/views/renalware/medications/_form.html.slim
@@ -25,7 +25,7 @@
       ul.drug-results.no-bullet
 
       = pm.hidden_field :medicatable_id, class: "selected-medicatable-id"
-      = pm.hidden_field :medicatable_type, value: "Renalware::Drug", class: "selected-medicatable-type"
+      = pm.hidden_field :medicatable_type, value: "Renalware::Drugs::Drug", class: "selected-medicatable-type"
 
     /! Show only when selecting drugs by category/type.
     .drug-by-select
