--- a/app/views/renalware/navigation/_renalware_admin.html.slim
+++ b/app/views/renalware/navigation/_renalware_admin.html.slim
@@ -5,7 +5,7 @@ li.has-dropdown
       li
         = link_to "Event Types", event_types_path
       li
-        = link_to "Drugs", drugs_path
+        = link_to "Drugs", drugs_drugs_path
       li
         = link_to "Modalities", modality_codes_path
       li
