Fixing rebase - adding scope 'ordered.'

--- a/app/views/renalware/modalities/index.html.slim
+++ b/app/views/renalware/modalities/index.html.slim
@@ -16,4 +16,4 @@
           td= modality.modality_code.name
           td= modality.notes
           td= modality.start_date
-          td= modality.termination_date
+          td= modality.end_date
