Updated remaining files affected by modality started/ended_on attribute name change.

--- a/app/views/renalware/modalities/index.html.slim
+++ b/app/views/renalware/modalities/index.html.slim
@@ -15,5 +15,5 @@
         tr
           td= modality.modality_code.name
           td= modality.notes
-          td= modality.start_date
-          td= modality.end_date
+          td= modality.started_on
+          td= modality.ended_on
