--- a/app/views/renalware/modalities/new.html.slim
+++ b/app/views/renalware/modalities/new.html.slim
@@ -27,8 +27,8 @@
           = link_to "Renal Registry Reason for Change Codes", "#", id: "modal-reason-code", class: "button tiny mt"
 
         li
-          = m.label :date, "Start Date"
-          = m.date_select(:start_date, {start_year: (1.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")
+          = m.label :started_on, "Start Date"
+          = m.date_select(:started_on, {start_year: (1.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")
 
         li.hide-death
           = m.label :notes, "Notes"
