Allow for blank event type

--- a/app/views/renalware/events/_event.html.slim
+++ b/app/views/renalware/events/_event.html.slim
@@ -1,6 +1,6 @@
 tr
   td= event.created_at.strftime("%d/%m/%Y")
-  td= event.event_type.name
+  td= event.event_type
   td
     dl.accordion(data-accordion)
       dd.accordion-navigation
