--- a/app/views/renalware/events/new.html.slim
+++ b/app/views/renalware/events/new.html.slim
@@ -12,7 +12,7 @@
           = f.label :date_time, "Patient Event Date/Time"
           = f.datetime_select(:date_time, { start_year: (5.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")
           = f.label :event_type_id, "Patient Event Type"
-          = f.collection_select(:event_type_id, Renalware::EventType.all, :id, :name )
+          = f.collection_select(:event_type_id, Renalware::EventType.all, :id, :name, include_blank: true)
 
           = f.label :description, "Description"
           = f.text_field :description
