--- a/app/views/renalware/events/types/edit.html.slim
+++ b/app/views/renalware/events/types/edit.html.slim
@@ -9,4 +9,4 @@
 
       = submit_tag "Update", class: "button"
       span= " or "
-      = link_to "cancel", event_types_path
+      = link_to "cancel", events_types_path
