--- a/app/views/renalware/navigation/_renalware_admin.html.slim
+++ b/app/views/renalware/navigation/_renalware_admin.html.slim
@@ -3,7 +3,7 @@ li.has-dropdown
   ul.dropdown
     - if current_user_is_super_admin?
       li
-        = link_to "Event Types", event_types_path
+        = link_to "Event Types", events_types_path
       li
         = link_to "Drugs", drugs_drugs_path
       li
