--- a/app/views/renalware/problems/problems/_new.html.slim
+++ b/app/views/renalware/problems/problems/_new.html.slim
@@ -12,4 +12,4 @@
 
         .row#new-probs-template
           .problem-form data={ index: @patient.problems.length - 1 }
-            = render partial: "renalware/problems/form", locals: { pb: pb }
+            = render partial: "renalware/problems/problems/form", locals: { pb: pb }
