--- a/app/views/renalware/problems/problems/index.html.slim
+++ b/app/views/renalware/problems/problems/index.html.slim
@@ -9,12 +9,12 @@
   = form_for @patient, url: patient_problems_batch_path(@patient) do |f|
     = f.fields_for :problems do |pb|
       - if pb.object.versions.any?
-        = render 'versions', object: pb.object, versions: pb.object.versions
+        = render "versions", object: pb.object, versions: pb.object.versions
 
       - if pb.object.new_record?
-        = render partial: 'renalware/problems/new', locals: { pb: pb }
+        = render partial: "renalware/problems/problems/new", locals: { pb: pb }
       - else
-        = render partial: 'renalware/problems/problem', locals: { pb: pb }
+        = render partial: "renalware/problems/problems/problem", locals: { pb: pb }
 
     - unless current_user.read_only?
       = f.submit "Save Problems", class: "button mt"
