Follow naming conventions

--- a/app/views/renalware/patients/new.html.slim
+++ b/app/views/renalware/patients/new.html.slim
@@ -5,7 +5,7 @@
     = render partial: "renalware/shared/errors", locals: { model: @patient }
 
     = form_for @patient, method: :post do |f|
-      = render partial: "renalware/patients/demographic_form", locals: { patient: f }
+      = render partial: "renalware/patients/form", locals: { patient: f }
 
       = submit_tag "Save", class: "button"
       span= " or "
