--- a/app/views/renalware/patients/edit.html.slim
+++ b/app/views/renalware/patients/edit.html.slim
@@ -6,7 +6,7 @@
   .large-12.columns
 
     = form_for @patient, method: :put do |f|
-      = render partial: "renalware/patients/demographic_form", locals: { patient: f }
+      = render partial: "renalware/patients/form", locals: { patient: f }
 
       = submit_tag "Update", class: "button"
       span= " or "
