Extracts Gender value object
- Stores sex with the same values as Wardware
- Encapsulates valid options in a Gender class

--- a/app/views/renalware/patients/_form.html.slim
+++ b/app/views/renalware/patients/_form.html.slim
@@ -28,7 +28,7 @@
           ul.no-bullet
             li
               = patient.label :sex, "Sex"
-              = patient.select(:sex, gender_options, { prompt: "Please select gender" })
+              = patient.collection_select(:sex, Renalware::Gender.all, :code, :name, { prompt: "Please select gender" })
 
             li
               = patient.label :ethnicity_id, "Ethnicity"
