Rename ‘surname’ to ‘family_name’ in patients
This makes it consistent with Wardware.

--- a/app/views/renalware/patients/_form.html.slim
+++ b/app/views/renalware/patients/_form.html.slim
@@ -17,8 +17,8 @@
         .large-4.columns
           ul.no-bullet
             li
-              = patient.label :surname
-              = patient.text_field :surname
+              = patient.label :family_name
+              = patient.text_field :family_name
 
             li
               = patient.label :forename
