--- a/app/views/renalware/patients/show.html.slim
+++ b/app/views/renalware/patients/show.html.slim
@@ -19,7 +19,7 @@
         .large-3.columns
           dl
             dt Last Name:
-            dd= @patient.surname
+            dd= @patient.family_name
 
             dt First Name:
             dd= @patient.forename
