--- a/app/views/renalware/patients/_form.html.slim
+++ b/app/views/renalware/patients/_form.html.slim
@@ -21,8 +21,8 @@
               = patient.text_field :family_name
 
             li
-              = patient.label :forename
-              = patient.text_field :forename
+              = patient.label :given_name
+              = patient.text_field :given_name
 
         .large-4.columns
           ul.no-bullet
