--- a/app/views/renalware/patients/show.html.slim
+++ b/app/views/renalware/patients/show.html.slim
@@ -22,7 +22,7 @@
             dd= @patient.family_name
 
             dt First Name:
-            dd= @patient.forename
+            dd= @patient.given_name
 
         .large-3.columns
           dl
