Rename “birth_date” to “born_on” for patients
- makes naming consistent with Wardware
- follow Rails naming conventions

--- a/app/views/renalware/patients/_form.html.slim
+++ b/app/views/renalware/patients/_form.html.slim
@@ -35,8 +35,8 @@
               = patient.collection_select(:ethnicity_id, Renalware::Ethnicity.all, :id, :name, { prompt: "Please select ethnicity" })
 
         .large-6.columns
-          = patient.label :birth_date, "DoB"
-          = patient.date_select(:birth_date, {start_year: (100.years.ago).year, end_year: Time.now.year , order: [:day, :month, :year]}, class: "dob")
+          = patient.label :born_on, "DoB"
+          = patient.date_select(:born_on, {start_year: (100.years.ago).year, end_year: Time.now.year , order: [:day, :month, :year]}, class: "dob")
 
         .large-12.columns
           = patient.check_box :paediatric_patient_indicator
