--- a/app/views/renalware/patients/_patient.html.slim
+++ b/app/views/renalware/patients/_patient.html.slim
@@ -4,5 +4,5 @@ tr
   td= patient.nhs_number
   td= patient.local_patient_id
   td= patient.sex
-  td= patient.birth_date
+  td= patient.born_on
   td= patient.age
