--- a/app/views/renalware/patients/show.html.slim
+++ b/app/views/renalware/patients/show.html.slim
@@ -35,7 +35,7 @@
         .large-3.columns
           dl
             dt Date of Birth:
-            dd= @patient.birth_date
+            dd= @patient.born_on
 
             dt Date of Death:
             dd= @patient.death_date.blank? ? "N/A" : @patient.death_date
