--- a/app/views/renalware/deaths/edit.html.slim
+++ b/app/views/renalware/deaths/edit.html.slim
@@ -15,8 +15,8 @@
   .large-12.columns
     = form_for @patient, url: patient_death_path(@patient) do |f|
 
-      = f.label :death_date, "Date of Death"
-      = f.date_select(:death_date, {start_year: (1.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year], include_blank: true}, class: "datetime")
+      = f.label :died_on, "Date of Death"
+      = f.date_select(:died_on, {start_year: (1.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year], include_blank: true}, class: "datetime")
 
       = f.label :first_edta_code_id, "EDTA Cause of Death (1)"
       = f.collection_select :first_edta_code_id, Renalware::EdtaCode.all, :id, :death_cause, {prompt: "Select 1st cause of death", include_blank: true}, class: "edta-select"
