--- a/app/views/renalware/deaths/index.html.slim
+++ b/app/views/renalware/deaths/index.html.slim
@@ -25,5 +25,5 @@
           td= patient.local_patient_id
           td= patient.sex
           td= patient.born_on
-          td= patient.death_date
+          td= patient.died_on
           td= patient.age
