--- a/app/views/renalware/deaths/edit.html.slim
+++ b/app/views/renalware/deaths/edit.html.slim
@@ -24,8 +24,8 @@
       = f.label :second_edta_code_id, "EDTA Cause of Death (2)"
       = f.collection_select :second_edta_code_id, Renalware::EdtaCode.all, :id, :death_cause, {prompt: "Select 2nd cause of death", include_blank: true}, class: "edta-select"
 
-      = f.label :death_details, "Notes/Details"
-      = f.text_field :death_details
+      = f.label :death_notes, "Notes/Details"
+      = f.text_field :death_notes
 
       = submit_tag "Save Cause of Death", class: "button tiny right save"
 
