Rename “hosp_centre_code” to “hospital_centre_code” in patients
No need to abbreviate hospital

--- a/app/views/renalware/patients/show.html.slim
+++ b/app/views/renalware/patients/show.html.slim
@@ -72,7 +72,7 @@
 
         dl
           dt Hospital Centre Code:
-          dd= @patient.hosp_centre_code
+          dd= @patient.hospital_centre_code
 
         dl
           dt Primary ESRF Centre:
