--- a/app/views/renalware/patients/_organisation_practice_form.html.slim
+++ b/app/views/renalware/patients/_organisation_practice_form.html.slim
@@ -8,8 +8,8 @@ ul.no-bullet
     = patient.text_field :pct_org_code
 
   li
-    = patient.label :hosp_centre_code, "Hospital Centre Code"
-    = patient.text_field :hosp_centre_code
+    = patient.label :hospital_centre_code, "Hospital Centre Code"
+    = patient.text_field :hospital_centre_code
 
   li
     = patient.label :primary_esrf_centre, "Primary ESRF Centre"
