--- a/app/views/renalware/transplants/registrations/_sections_nav.html.slim
+++ b/app/views/renalware/transplants/registrations/_sections_nav.html.slim
@@ -2,6 +2,7 @@ ruby:
   sections = [
     ["Codes", "codes"],
     ["CRF", "crf"],
+    ["HLA", "hla"],
     ["Transplant", "transplant"],
     ["Organs", "organs"],
     ["Consent", "consent"],
