--- a/app/assets/stylesheets/renalware/globals.css.scss
+++ b/app/assets/stylesheets/renalware/globals.css.scss
@@ -169,6 +169,7 @@ h5 {
 
       p {
         padding: 0;
+        margin: 0;
       }
     }
   }
@@ -185,4 +186,9 @@ span.note {
     display: block;
     font-size: 5em;
   }
+}
+
+span.monospaced {
+  font-family: monospace;
+  font-size: 1.4em;
 }
