--- a/app/views/renalware/transplants/dashboards/show.html.slim
+++ b/app/views/renalware/transplants/dashboards/show.html.slim
@@ -9,7 +9,21 @@
       legend Transplant Wait List Registration
 
       - if @registration.persisted?
-        .large-5.columns
+        .large-3.columns
+          dl
+            dt Status:
+            dd
+              b= @registration.current_status
+              br
+              | since&nbsp;
+              = datestamp @registration.current_status.started_on
+
+        .large-3.columns
+          dl
+            dt Transplant Type:
+            dd= @registration.document.organs.transplant_type.try(:text)
+
+        .large-4.columns
           dl
             dt Last Update:
             dd
@@ -18,10 +32,6 @@
                 | &nbsp;by&nbsp;
                 = who_did_it version
 
-        .large-5.columns
-          dl
-            dt Transplant Type:
-            dd= @registration.document.organs.transplant_type.try(:text)
 
         .large-2.columns
           .right
